Fix expand/collapse shows displaced child nodes when scrolled (jQuery UI 1.12)
Close #717

--- a/src/skin-bootstrap-n/ui.fancytree.css
+++ b/src/skin-bootstrap-n/ui.fancytree.css
@@ -65,6 +65,9 @@ ul.fancytree-container li.fancytree-lastsib,
 ul.fancytree-no-connector > li {
   background-image: none;
 }
+li.fancytree-animating {
+  position: relative;
+}
 /*------------------------------------------------------------------------------
  * Common icon definitions
  *----------------------------------------------------------------------------*/
@@ -478,22 +481,22 @@ ul.fancytree-container ul {
 }
 @-webkit-keyframes spin {
   0% {
-	-webkit-transform: rotate(0deg);
-	transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-	-webkit-transform: rotate(359deg);
-	transform: rotate(359deg);
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
 @keyframes spin {
   0% {
-	-webkit-transform: rotate(0deg);
-	transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-	-webkit-transform: rotate(359deg);
-	transform: rotate(359deg);
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
 span.fancytree-node {
