--- a/src/skin-common.less
+++ b/src/skin-common.less
@@ -156,6 +156,11 @@ ul.fancytree-no-connector > li {
 	background-image: none;
 }
 
+// Fix jQuery UI 'blind' animation for jQuery UI (#717)
+li.fancytree-animating {
+	position: relative;
+}
+
 /*------------------------------------------------------------------------------
  * Common icon definitions
  *----------------------------------------------------------------------------*/
